# ChatOps

./: .gitignore  ChatOps.py  pyproject.toml  readme.md
configs/: Get_Configs.py  cli.txt  prompt_roles.json
env/: llm-sample.env
output/bot_v1/poems/: ChatOpsHaiku.txt
outputs/FunctionAppCore_v0/: README.md  __init__.py
outputs/Terraform_v0/: README.md  main.tf  outputs.tf  variables.tf
outputs/jupyter notebook_v0/: Dev_Container_Configuration.md  Dockerfile.json  devcontainer.json.txt  requirements.txt.txt
outputs/spark_v1/: Dockerfile  docker-compose.yaml  spark-defaults.conf
outputs/test_v1/: ChatOps_Haiku.md
outputs/test_v3/: ChatOps_Haiku.md
scripts/: chatops_to_path.ps1  chatops_to_path.sh
src/chatops/: ChatChain.py  ChatFrameValidator.py  OutputChain.py
